Adding live reload functionality

--- a/server-nodejs/nodetest1/views/main.jade
+++ b/server-nodejs/nodetest1/views/main.jade
@@ -42,4 +42,8 @@ block content
                }]
            });
       });
- 
+
+     script.
+         setInterval(function() {
+             location.reload(true);
+         }, 3000) 
