--- a/server-nodejs/nodetest1/views/layout.jade
+++ b/server-nodejs/nodetest1/views/layout.jade
@@ -12,5 +12,5 @@ html
     script(src='https://code.highcharts.com/highcharts.js')
     script(src='https://code.highcharts.com/modules/exporting.js')
     script (src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"')
-  body
+  body(style = "background:#CCC")
     block content
