Added building display on the webpage

--- a/server-nodejs/nodetest1/views/main.jade
+++ b/server-nodejs/nodetest1/views/main.jade
@@ -8,7 +8,7 @@ block content
 
     div.container(style = "padding-top : 20px; padding-bottom: 20px")
 
-        div(style = "background-color: black; color: white; padding: 6px 6px 6px 6px; font: bold 30px Arial; text-align: center") #{searchbin_data.building}
+        div(style = "background-color: black; color: white; padding: 6px 6px 6px 6px; font: bold 30px Arial; text-align: center") #{searchbin_data.building} - Usage for #{searchbin_data.usagekW}kW
         
         div.row
             div.col-sm-3(style = "background-color: #00bfff; color: black; padding: 6px 6px 6px 6px; font: bold 20px Arial; text-align: center") Day - #{searchbin_data.DayOfMonth}
