adding lambda and backend code to handle predict month and predict day with plot update

--- a/server-nodejs/nodetest1/views/main.jade
+++ b/server-nodejs/nodetest1/views/main.jade
@@ -49,10 +49,12 @@ block content
                        text: 'Power (kW)'
                    }
                },
-               series: [{
+               series: [
+                  {
                    name: 'Power',
                    data: [#{baseline_data.y_predict}]
-               }]
+                  }
+               ]
            });
       });
 
