--- a/server-nodejs/nodetest1/views/main.jade
+++ b/server-nodejs/nodetest1/views/main.jade
@@ -52,10 +52,11 @@ block content
            });
       });
 
-     script.
-         setInterval(function() {
-             location.reload(true);
-         }, 5000) 
+
+//     script.
+//         setInterval(function() {
+//             location.reload(true);
+//         }, 5000) 
 
     
     div
