--- a/server-nodejs/nodetest1/views/building_conditions.jade
+++ b/server-nodejs/nodetest1/views/building_conditions.jade
@@ -1,31 +1,64 @@
 extends layout
 
 block content
-    div 
-      h2(style="text-align: center") Average Conditions when #{searchbin_data.building} is Consuming is #{searchbin_data.usagekW} kW
-    
-    div.row
-      div.col-sm-3
-        img(src="/images/DayOfMonth.png" style="max-width:80%;height:auto")
-        p Day of Month: 6
-      div.col-sm-3
-        img(src="/images/HourOfDay.png" style="max-width:80%;height:auto")
-        p Hour of Day: 3
-      div.col-sm-3
-        img(src="/images/Temperature.png" style="max-width:80%;height:auto")
-        p Temperature: 24 C
-      div.col-sm-3
-        img(src="/images/RelativeHumidity.png" style="max-width:80%;height:auto")
-        p Rel. Humidity: 80 %
-      div.col-sm-3
-        img(src="/images/IncidentSolarRadiation.png" style="max-width:80%;height:auto")
-        p Incident Solar Radiation: 23 W/(m^2)
-      div.col-sm-3
-        img(src="/images/DewPoint.png" style="max-width:80%;height:auto")
-        p Dew Point: 25 C
-      div.col-sm-3
-        img(src="/images/WindSpeed.png" style="max-width:80%;height:auto")
-        p Wind Speed: 12 knots
-      div.col-sm-3
-        img(src="/images/GustSpeed.png" style="max-width:80%;height:auto")
-        p Gust Speed: 22 knots
+  meta(charset="utf-8")
+  script(src="http://d3js.org/d3.v4.min.js")
+  //- - function arcfill(p, svgtag) {var tau = 2 * Math.PI; var arc = d3.arc().innerRadius(20).outerRadius(30).startAngle(-1*tau/4); var svg = d3.select(svgtag); var width = +svg.attr("width"); var height = +svg.attr("height"); var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue"); };
+
+  div 
+    h1(style="text-align: center; padding-bottom:30px") Average Conditions when #{searchbin_data.building} is Consuming is #{searchbin_data.usagekW} kW
+  
+  div.row
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/DayOfMonth.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Day of Month: 6
+      svg(id="DayOfMonthSvg" width="90" height="90" style="margin:auto")
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#DayOfMonthSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var p = 0.85;
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/HourOfDay.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Hour of Day: 3
+      svg(id="HourOfDaySvg" width="90" height="90" style="margin:auto")
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#HourOfDaySvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var p = 0.15;
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/Temperature.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Temperature: 24 C
+      svg(id="TemperatureSvg" width="90" height="90" style="margin:auto")
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/RelativeHumidity.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Rel. Humidity: 80 %
+      svg(id="HumiditySvg" width="90" height="90" style="margin:auto")
+  div.row
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/IncidentSolarRadiation.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Incident Solar Radiation: 23 W/(m^2)
+      svg(id="SolarSvg" width="90" height="90" style="margin:auto")
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/DewPoint.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Dew Point: 25 C
+      svg(id="DewPointSvg" width="90" height="90" style="margin:auto")
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/WindSpeed.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Wind Speed: 12 knots
+      svg(id="WindSpeedSvg" width="90" height="90" style="margin:auto")
+    div.col-sm-3(style="text-align:center")
+      img(src="/images/GustSpeed.png" style="max-width:50%; height:auto; margin:auto")
+      p(style="margin:auto") Gust Speed: 22 knots
+      svg(id="GustSpeedSvg" width="90" height="90" style="margin:auto")
