--- a/server-nodejs/nodetest1/views/building_conditions.jade
+++ b/server-nodejs/nodetest1/views/building_conditions.jade
@@ -13,6 +13,7 @@ block content
       img(src="/images/DayOfMonth.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Day of Month: 6
       svg(id="DayOfMonthSvg" width="90" height="90" style="margin:auto")
+      - var p1 = 6 / (30 - 0)
       script.
         var tau = 2 * Math.PI; 
         var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
@@ -21,12 +22,12 @@ block content
         var height = +svg.attr("height"); 
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
-        var p = 0.85;
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p1} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/HourOfDay.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Hour of Day: 3
       svg(id="HourOfDaySvg" width="90" height="90" style="margin:auto")
+      - var p2 = 3 / (24 - 0)
       script.
         var tau = 2 * Math.PI; 
         var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
@@ -35,30 +36,89 @@ block content
         var height = +svg.attr("height"); 
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
-        var p = 0.15;
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p2} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/Temperature.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Temperature: 24 C
       svg(id="TemperatureSvg" width="90" height="90" style="margin:auto")
+      - var p3 = 24 / (38 - -18)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#TemperatureSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p3} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/RelativeHumidity.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Rel. Humidity: 80 %
       svg(id="HumiditySvg" width="90" height="90" style="margin:auto")
+      - var p4 = 80 / (100 - 0)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#HumiditySvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p4} * tau / 2}).attr("d", arc).style("fill", "blue");
   div.row
     div.col-sm-3(style="text-align:center")
       img(src="/images/IncidentSolarRadiation.png" style="max-width:50%; height:auto; margin:auto")
-      p(style="margin:auto") Incident Solar Radiation: 23 W/(m^2)
+      p(style="margin:auto") Incident Solar Radiation: 229 W/(m^2)
       svg(id="SolarSvg" width="90" height="90" style="margin:auto")
+      - var p5 = 23 / (1000 - 0)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#SolarSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p5} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/DewPoint.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Dew Point: 25 C
       svg(id="DewPointSvg" width="90" height="90" style="margin:auto")
+      - var p6 = 25 / (38 - -18)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#DewPointSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p6} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/WindSpeed.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Wind Speed: 12 knots
       svg(id="WindSpeedSvg" width="90" height="90" style="margin:auto")
+      - var p7 = 12 / (70 - 0)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#WindSpeedSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p7} * tau / 2}).attr("d", arc).style("fill", "blue");
     div.col-sm-3(style="text-align:center")
       img(src="/images/GustSpeed.png" style="max-width:50%; height:auto; margin:auto")
       p(style="margin:auto") Gust Speed: 22 knots
       svg(id="GustSpeedSvg" width="90" height="90" style="margin:auto")
+      - var p8 = 22 / (70 - 0)
+      script.
+        var tau = 2 * Math.PI; 
+        var arc = d3.arc().innerRadius(25).outerRadius(40).startAngle(-1*tau/4); 
+        var svg = d3.select("#GustSpeedSvg"); 
+        var width = +svg.attr("width"); 
+        var height = +svg.attr("height"); 
+        var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
+        var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + #{p8} * tau / 2}).attr("d", arc).style("fill", "blue");
