--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -3,10 +3,8 @@ extends layout
 block content
 
     div 
-      h3 The most optimum strategy among the ones displayed below has lighting,
-      chilled water temperature and zone temperature set to
-      #{synthesizer_data[0].lighting}, #{synthesizer_data[0].cwt} and
-      #{synthesizer_data[0].zt} respectively.
+      h3.
+        The most optimum strategy is strategy #{synthesizer_data.best_id} with a power consumption of #{synthesizer_data.best_energy} kWh.
 
     div#lineContainer(style = "padding-top : 20px; padding-bottom: 20px")
     script.
@@ -29,15 +27,15 @@ block content
                },
                series: [
                   {
-                    name: 'Strategy 1',
+                    name: 'Strategy 0',
                     data: [#{synthesizer_data[0].y_predict}]
                   },
                   {
-                    name: 'Strategy 2',
+                    name: 'Strategy 1',
                     data: [#{synthesizer_data[1].y_predict}]
                   },
                   {
-                    name: 'Strategy 3',
+                    name: 'Strategy 2',
                     data: [#{synthesizer_data[2].y_predict}]
                   }
                ]
@@ -45,20 +43,20 @@ block content
       });
 
     div
+      p Strategy 0 assuming set point values:
+      ul
+        li lighting level: #{synthesizer_data[0].lil}
+        li chilled water temperature: #{synthesizer_data[0].cwsetp}
+        li zone temperature: #{synthesizer_data[0].clgsetp}
+
       p Strategy 1 assuming set point values:
       ul
-        li lighting level: 
-        li chilled water temperature: 
-        li zone temperature:
-
+        li lighting level: #{synthesizer_data[1].lil}
+        li chilled water temperature: #{synthesizer_data[1].cwsetp}
+        li zone temperature: #{synthesizer_data[1].clgsetp}
+      
       p Strategy 2 assuming set point values:
       ul
-        li lighting level: 
-        li chilled water temperature: 
-        li zone temperature: 
-      
-      p Strategy 3 assuming set point values:
-      ul
-        li lighting level: 
-        li chilled water temperature: 
-        li zone temperature: 
+        li lighting level: #{synthesizer_data[2].lil}
+        li chilled water temperature: #{synthesizer_data[2].cwsetp}
+        li zone temperature: #{synthesizer_data[2].clgsetp}
