--- a/server-nodejs/nodetest1/views/threeplots.jade
+++ b/server-nodejs/nodetest1/views/threeplots.jade
@@ -17,7 +17,7 @@ block content
                    text: 'Energy Usage'
                },
                xAxis: {
-                   categories: [#{synthesizer_data[0].time}],
+                   categories: [#{baseline_data.time}],
                    title : { text: 'Time' }
                },
                yAxis: {
