landing page format changes

--- a/server-nodejs/nodetest1/views/landing.jade
+++ b/server-nodejs/nodetest1/views/landing.jade
@@ -3,11 +3,12 @@ extends layout
 block content
 
     div.jumbotron
-     h1(style = "text-align:center") Hermione
-     h2(style = "text-align:center") Interactive Energy Management
+      h1(style = "text-align:center") Hermione
+      h2(style = "text-align:center") Interactive Energy Management
+      img(src="/images/LandingPage1.png" style="max-width:100%; height:auto; margin:auto")
 
     div 
-      h2(style="text-align: center") Welcome to Hermione! Ask me questions like:
+      h2(style="text-align: center") Welcome! Ask me questions like:
       ul
         li Describe the conditions for {Building} when energy usage is {Usage} kilowatts
         li What is the predicted energy consumption for {Day}
