--- a/server-nodejs/nodetest1/views/building_conditions.jade
+++ b/server-nodejs/nodetest1/views/building_conditions.jade
@@ -5,11 +5,11 @@ block content
   script(src="http://d3js.org/d3.v4.min.js")
 
   div 
-    h1(style="text-align: center; padding-bottom:30px") Average Conditions when #{searchbin_data.building} is Consuming is #{searchbin_data.usagekW} kW
+    h1(style="text-align: center; padding-bottom:50px") Average Conditions when #{searchbin_data.building} is Consuming is #{searchbin_data.usagekW} kW
   
   div.row
     div.col-sm-3(style="text-align:center")
-      img(src="/images/DayOfMonth.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/DayOfMonth.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Day of Month: #{searchbin_data.DayOfMonth}
       svg(id="DayOfMonthSvg" width="90" height="90" style="margin:auto")
       script.
@@ -21,9 +21,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var p = (#{searchbin_data.DayOfMonth} - 1) / (30 - 1);
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/HourOfDay.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/HourOfDay.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Hour of Day: #{searchbin_data.TimeOfDay}
       svg(id="HourOfDaySvg" width="90" height="90" style="margin:auto")
       script.
@@ -35,9 +35,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc);
         var p = (#{searchbin_data.TimeOfDay} - 0) / (24 - 0); 
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/Temperature.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/Temperature.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Temperature: #{searchbin_data.AvgTemperature} C
       svg(id="TemperatureSvg" width="90" height="90" style="margin:auto")
       script.
@@ -49,9 +49,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
         var p = (#{searchbin_data.AvgTemperature} - -18) / (38 - -18);
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/RelativeHumidity.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/RelativeHumidity.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Rel. Humidity: #{searchbin_data.AvgHumidity} %
       svg(id="HumiditySvg" width="90" height="90" style="margin:auto")
       script.
@@ -63,10 +63,10 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
         var p = (#{searchbin_data.AvgHumidity} - 0) / (100 - 0);
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
   div.row
     div.col-sm-3(style="text-align:center")
-      img(src="/images/IncidentSolarRadiation.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/IncidentSolarRadiation.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Incident Solar Radiation: #{searchbin_data.AvgSolar} W/(m^2)
       svg(id="SolarSvg" width="90" height="90" style="margin:auto")
       script.
@@ -78,9 +78,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc);
         var p = (#{searchbin_data.AvgSolar} - 0) / (1000 - 0); 
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/DewPoint.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/DewPoint.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Dew Point: #{searchbin_data.AvgDewPoint} C
       svg(id="DewPointSvg" width="90" height="90" style="margin:auto")
       script.
@@ -92,9 +92,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc);
         var p = (#{searchbin_data.AvgDewPoint} - -18) / (38 - -18);
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/WindSpeed.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/WindSpeed.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Wind Speed: #{searchbin_data.AvgWindSpeed} knots
       svg(id="WindSpeedSvg" width="90" height="90" style="margin:auto")
       script.
@@ -106,9 +106,9 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc); 
         var p = (#{searchbin_data.AvgWindSpeed} - 0) / (70 - 0);
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
     div.col-sm-3(style="text-align:center")
-      img(src="/images/GustSpeed.png" style="max-width:50%; height:auto; margin:auto")
+      img(src="/images/GustSpeed.png" style="max-width:40%; height:auto; margin:auto")
       p(style="margin:auto") Gust Speed: #{searchbin_data.AvgGusts} knots
       svg(id="GustSpeedSvg" width="90" height="90" style="margin:auto")
       script.
@@ -120,4 +120,4 @@ block content
         var g = svg.append("g").attr("transform", "translate(" + width / 2 + "," + height / 2 + ")"); 
         var background = g.append("path").datum({endAngle: tau / 4}).style("fill", "#ddd").attr("d", arc);
         var p = (#{searchbin_data.AvgGusts} - 0) / (70 - 0) 
-        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "blue");
+        var foreground = g.append("path").datum({endAngle: (-1*tau/4) + p * tau / 2}).attr("d", arc).style("fill", "#4e71c9");
